2020-03-22  Omar Sandoval  <osandov@fb.com>
	    Mark Wielaard  <mark@klomp.org>

	* getphdrnum.c: New file.
	* run-getphdrnum.sh: New test.
	* testfile-phdrs.elf.bz2: New test file.
	* Makefile.am (check_PROGRAMS): Add getphdrnum.
	(TESTS): Add run-getphdrnum.sh.
	(EXTRA_DIST): Add run-getphdrnum.sh and testfile-phdrs.elf.bz2.
	(getphdrnum_LDADD): New variable.

2020-03-22  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Look for URL in default progressfn
	and from debuginfod-find -v.

2020-02-19  Aaron Merey  <amerey@redhat.com>

	* run-debuginfod-find.sh: Run tests for	verifying default
	client cache locations.

2020-02-26  Konrad Kleine <kkleine@redhat.com>

	* run-debuginfod-find.sh: added tests for DEBUGINFOD_URLS beginning
	with "file://"

2020-02-21  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (TESTS_ENVIRONMENT): Explicitly unset DEBUGINFOD_URLS.
	(installed_TESTS_ENVIRONMENT): Likewise.

2020-02-19  Aaron Merey  <amerey@redhat.com>

	* run-debuginfod-find.sh: Test that files unrelated to debuginfod
	survive cache cleaning.

2020-02-08  Mark Wielaard  <mark@klomp.org>

	* run-pt_gnu_prop-tests.sh: New test.
	* testfile_pt_gnu_prop.bz2: New test file.
	* testfile_pt_gnu_prop32.bz2: Likewise.
	* Makefile.am (TESTS): Add run-pt_gnu_prop-tests.sh
	(EXTRA_DISTS): Likewise. Add testfile_pt_gnu_prop.bz2 and
	testfile_pt_gnu_prop32.bz2.

2020-02-05  Frank Ch. Eigler  <fche@redhat.com>

	* debuginfo-tars/*: New test files from Eli Schwartz of ArchLinux.
	* Makefile.am (EXTRA_DIST): Package them.
	* run-debuginfod-find.sh: Run basic archive extraction tests.

2020-02-03  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Protect against missing curl & rpm2cpio.

2020-01-19  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Check for proper groom completion count.

2020-01-18  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Test empty source_paths[].

2020-01-08  Mark Wielaard  <mark@klomp.org>
